Fix overlap issue with hero when using paragraph component then full image component.

--- a/kronofoto/static/assets/scss/components/exhibit/hero.scss
+++ b/kronofoto/static/assets/scss/components/exhibit/hero.scss
@@ -2,6 +2,7 @@
 @use '../../typography' as *;
 
 .hero {
+  z-index: 9999;
   background-color: $primary-color;
   color: white;
   text-align: center;
